# kataru

./: .gitignore  AGENTS.md  App.tsx  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  main.tsx  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
components/: AppSkeleton.tsx  CharacterGeneratorModal.tsx  CharacterSettingsModal.tsx  ChatSidebar.tsx  ChatWindow.tsx  CostumeDiffModal.tsx  ErrorBoundary.tsx  ExpressionDiffModal.tsx  FirstRunGuide.tsx  GlobalSettingsModal.tsx  ImageCropArea.tsx  ImageGenerationModal.tsx  MemoryListModal.tsx  MessageBubble.tsx  PromptBlockEditor.tsx  SidebarSearchDialog.tsx  SituationDescriptionGeneratorModal.tsx  SituationSettingsModal.tsx  StatisticsPanel.tsx  StoredImage.tsx
lib/: aiProvider.ts  characterGeneration.ts  chatAssistantResponse.ts  db.ts  id.ts  imageSource.ts  imageUtils.ts  importExport.ts  markdownUtils.ts  modelDefaults.ts  store.ts  visualDiffMigration.ts
migrations/: 0001_initial.sql  0002_image_assets.sql
scripts/: check-release-version.mjs  dev.mjs  smoke-binary.mjs  start.mjs
src/: config.rs  error.rs  main.rs  static_assets.rs  update.rs
src/ai/: mod.rs  provider.rs  routes.rs
src/conversation/: jobs.rs  mod.rs  orchestrator.rs  prompts.rs  response.rs
src/db/: mod.rs  storage.rs
styles/: globals.css
