[package]
name = "kataru"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Standalone local-first roleplay chat application"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
directories = "6"
futures-util = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webbrowser = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
